[package]
name = "vfs_apis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
once_cell = "1.19"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
async-trait = "0.1"

[build-dependencies]

[profile.release]
opt-level = 3
lto = false
